🌈 style(ts/vue): Modify modified word

--- a/docs/src/TypeScript/01_类.md
+++ b/docs/src/TypeScript/01_类.md
@@ -13,8 +13,7 @@ class Person {
   }
 }
 //实例化类，需要传入与构造器定义的类型相符合的参数
-const person = 
-new Person('王', '小明');
+const person = new Person('王', '小明');
 //可以调用类里面的方法 
 person.sayHi('hi');
 ```
